// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Locale Middleware requires default locale 1`] = `"Expected defaultLocale to be a locale string."`;

exports[`Create Locale Middleware requires site locales 1`] = `"Expected siteLocales to be an array of locale string."`;

exports[`Create Locale Middleware should fallback country to its default and remove locale segment from url 1`] = `
Object {
  "defaultLocale": "id-id",
  "locale": Object {
    "country": "id",
    "language": "en",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
    "en-sg",
  ],
  "url": "/",
}
`;

exports[`Create Locale Middleware should fallback to default locale 1`] = `
Object {
  "defaultLocale": "id-id",
  "locale": Object {
    "country": "id",
    "language": "id",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
    "en-sg",
  ],
  "url": "/",
}
`;

exports[`Create Locale Middleware should fallback to default locale if none match 1`] = `
Object {
  "defaultLocale": "id-id",
  "locale": Object {
    "country": "id",
    "language": "id",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
    "en-sg",
  ],
  "url": "/ms-my/",
}
`;

exports[`Create Locale Middleware should match available site locales and remove locale segment from url 1`] = `
Object {
  "defaultLocale": "id-id",
  "locale": Object {
    "country": "sg",
    "language": "en",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
    "en-sg",
  ],
  "url": "/",
}
`;

exports[`Create Locale Middleware should match even without trailing slash 1`] = `
Object {
  "defaultLocale": "id-id",
  "locale": Object {
    "country": "sg",
    "language": "en",
  },
  "siteLocales": Array [
    "id-id",
    "en-id",
    "en-sg",
  ],
  "url": "/",
}
`;
